--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,19 +29,20 @@ dist.jar=${dist.dir}/Teleferik.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.trove-1.0.2.jar=C:\\Users\\shadowalker\\Downloads\\trove-1.0.2.jar
+file.reference.trove-1.0.2.jar-1=/home/gpaschos/Libraries/Trove/trove-1.0.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.trove-1.0.2.jar}:\
-    ${libs.JGAP.classpath}
+    ${libs.JGAP.classpath}:\
+    ${file.reference.trove-1.0.2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.7
-javac.target=1.7
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -62,7 +63,7 @@ main.class=Menu
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.8
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
