--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,12 @@ dist.jar=${dist.dir}/Teleferik.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.trove-1.0.2.jar-1=/home/gpaschos/Libraries/Trove/trove-1.0.2.jar
+file.reference.trove-1.0.2.jar=C:\\Users\\shadowalker\\Downloads\\trove-1.0.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.JGAP.classpath}:\
-    ${file.reference.trove-1.0.2.jar-1}
+    ${file.reference.trove-1.0.2.jar}:\
+    ${libs.JGAP.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -63,7 +63,7 @@ main.class=Menu
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
